[gd_scene load_steps=20 format=3 uid="uid://d28sbjt0i0qst"]

[ext_resource type="PackedScene" uid="uid://ddwtbnyshxxj3" path="res://Art_Assets/Levels/LevelGeometry.tscn" id="1_1wy1g"]
[ext_resource type="PackedScene" uid="uid://bk7vc4usjt3od" path="res://Player/player.tscn" id="1_7ireg"]
[ext_resource type="Script" uid="uid://bu07i0b06sujv" path="res://Game_Management/main_level.gd" id="1_romof"]
[ext_resource type="PackedScene" uid="uid://exdhmbr43ger" path="res://UI/UI.tscn" id="1_t065x"]
[ext_resource type="PackedScene" uid="uid://di1beqvco0ht6" path="res://Objects/InventoryItems/InventoryItem.tscn" id="2_f68k2"]
[ext_resource type="PackedScene" uid="uid://cwuhc7fibr0jj" path="res://UI/water_level_debug.tscn" id="2_hyf1s"]
[ext_resource type="Script" uid="uid://brrlrkleuxt1p" path="res://Game_Management/money.gd" id="3_8vdnm"]
[ext_resource type="Script" uid="uid://d0rpsw8qm8mxc" path="res://Level/water.gd" id="3_t065x"]
[ext_resource type="Material" uid="uid://cc3jyugw620gk" path="res://Art_Assets/Materials/WaterVertex.tres" id="3_vad1a"]
[ext_resource type="AudioStream" uid="uid://57dmf87xry8d" path="res://Audio/Sfx/spend_money.mp3" id="6_xpqtb"]
[ext_resource type="PackedScene" uid="uid://d04mojfecls7r" path="res://Objects/water_seller.tscn" id="8_cv6sc"]
[ext_resource type="AudioStream" uid="uid://b6hawj4wlcvs2" path="res://Audio/Sfx/Ambience/water_ambience.ogg" id="15_dbttc"]
[ext_resource type="PackedScene" uid="uid://hr021abwwm8b" path="res://Objects/Pump/pump.tscn" id="17_swadt"]
[ext_resource type="AudioStream" uid="uid://babm51jmu7wc5" path="res://Audio/Sfx/Ambience/nature_ambience.ogg" id="18_hhlvi"]
[ext_resource type="Script" uid="uid://c6ov71035nkfo" path="res://Audio/Music/Band.gd" id="19_qqyv7"]
[ext_resource type="AudioStream" uid="uid://c0waf3078ni8q" path="res://Audio/Music/Song1.mp3" id="20_s4lgs"]
[ext_resource type="AudioStream" uid="uid://bx6v6xklxfma" path="res://Audio/Music/Song2.mp3" id="21_qqyv7"]

[sub_resource type="QuadMesh" id="QuadMesh_t065x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vad1a"]
size = Vector3(1000, 1, 1000)

[node name="MainLevel" type="Node3D"]
script = ExtResource("1_romof")

[node name="Water_Level_Debug" parent="." instance=ExtResource("2_hyf1s")]
mouse_filter = 2

[node name="Player" parent="." instance=ExtResource("1_7ireg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -12.0672)
collision_mask = 5

[node name="Money" type="Node" parent="."]
unique_name_in_owner = true
process_mode = 3
script = ExtResource("3_8vdnm")
starting_money = 1000000

[node name="MoneySound" type="AudioStreamPlayer" parent="Money"]
stream = ExtResource("6_xpqtb")

[node name="UI" parent="." instance=ExtResource("1_t065x")]

[node name="Enviroment" type="Node" parent="."]

[node name="LevelGeometry" parent="Enviroment" instance=ExtResource("1_1wy1g")]

[node name="Water" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 68.218, -83.1072, 171.569)
script = ExtResource("3_t065x")
starting_y = -89.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Water"]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -51.2785, -7.50375, -83.7181)
stream = ExtResource("15_dbttc")
volume_db = -6.0
unit_size = 90.0
autoplay = true

[node name="WaterPlane" type="MeshInstance3D" parent="Water"]
transform = Transform3D(700, 0, 0, 0, -3.0598e-05, 1, 0, -700, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_t065x")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("3_vad1a")

[node name="WaterTop" type="Area3D" parent="Water" groups=["Interactable"]]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Water/WaterTop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -52.3287, 0, 13.5603)
shape = SubResource("BoxShape3D_vad1a")
debug_color = Color(0, 0, 0, 1)

[node name="WaterFloat" type="StaticBody3D" parent="Water"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.75, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Water/WaterFloat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -52.3287, 0, 13.5603)
shape = SubResource("BoxShape3D_vad1a")
debug_color = Color(0, 0, 0, 1)

[node name="WaterSeller" parent="." instance=ExtResource("8_cv6sc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.71387, 0, -17.2599)

[node name="Audio" type="Node" parent="." groups=["Music", "Pickupable"]]
process_mode = 3
script = ExtResource("19_qqyv7")

[node name="Nature Ambience" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("18_hhlvi")
autoplay = true
bus = &"Ambience"

[node name="Song1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("20_s4lgs")
bus = &"Music"

[node name="Song2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("21_qqyv7")
bus = &"Music"

[node name="SongTimer" type="Timer" parent="Audio"]
wait_time = 120.0
one_shot = true

[node name="InventoryItems" type="Node3D" parent="."]

[node name="Keys" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.27016, 0, 0)
item_name = "Uncle Upgrade's Keys"
item_description = "You actually found them.  Nice."

[node name="Skateboard Wheel 1" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.55004, 0, 0)
item_name = "Skateboard Wheel 1"
item_description = "Trade all 4 to Uncle Upgrade for a Skateboard!"

[node name="Skateboard Wheel 2" parent="InventoryItems" instance=ExtResource("2_f68k2")]
item_name = "Skateboard Wheel 2"
item_description = "Trade all 4 to Uncle Upgrade for a Skateboard!"

[node name="Skateboard Wheel 3" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.52416, 0, 0)
item_name = "Skateboard Wheel 3"
item_description = "Trade all 4 to Uncle Upgrade for a Skateboard!"

[node name="Skateboard Wheel 4" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.56602, 0, 0)
item_name = "Skateboard Wheel 4"
item_description = "Trade all 4 to Uncle Upgrade for a Skateboard!"

[node name="Lit Test Item" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.58275, 0, 0)
item_description = "Trade to Uncle Upgrade for a Bucket.  REMOVE BEFORE LAUNCH!!!!"

[node name="Rollerskate Shoelace 1" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0593, 0, 0)
item_name = "Rollerskate Shoelace 1"
item_description = "Trade 2 of these to Uncle Upgrade for some skates!"

[node name="Rollerskate Shoelace 2" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.7712, 0, 0)
item_name = "Rollerskate Shoelace 2"
item_description = "Trade 2 of these to Uncle Upgrade for some skates!"

[node name="Hands For Dummies" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.9843, 0, 0)
item_name = "Hands For Dummies"
item_description = "You can trade this to Uncle Upgrade to get your hands!"

[node name="Square Pants" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.48, 0, 0)
item_name = "Square Pants"
item_description = "You can trade these to Uncle Upgrade to get a sponge!"

[node name="Diamond" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25.9531, 0, 0)
item_name = "Diamond"
item_description = "Trade this to Uncle Upgrade to get a watering can.  Great deal!"

[node name="Expense Report" parent="InventoryItems" instance=ExtResource("2_f68k2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.9398, 0, 0)
item_name = "Expense Report"
item_description = "Trade this to Uncle Upgrade to get a big jug."

[node name="AllPumps" type="Node" parent="."]

[node name="FirstLayer" type="Node" parent="AllPumps"]

[node name="Pump" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.109544, 0, -0.993982, 0, 1, 0, 0.993982, 0, -0.109544, 24.7001, -0.581938, -9.65339)
upgrade_markers = []

[node name="Pump2" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.346625, 0, -0.938004, 0, 1, 0, 0.938004, 0, -0.346625, 50.677, -0.581938, -7.3043)
upgrade_markers = []

[node name="Pump3" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.385923, 0, -0.922531, 0, 1, 0, 0.922531, 0, -0.385923, 75.7109, -0.581938, 4.864)
upgrade_markers = []

[node name="Pump4" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.425495, 0, -0.904961, 0, 1, 0, 0.904961, 0, -0.425495, 104.262, -0.581938, 15.1454)
upgrade_markers = []

[node name="Pump5" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.169556, 0, -0.985521, 0, 1, 0, 0.985521, 0, -0.169556, 131.482, -0.581938, 30.7838)
upgrade_markers = []

[node name="Pump6" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.631014, 0, -0.775772, 0, 1, 0, 0.775772, 0, 0.631014, 156.928, -0.581938, 21.1549)
upgrade_markers = []

[node name="Pump7" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.996287, 0, -0.0860956, 0, 1, 0, 0.0860956, 0, 0.996287, 170.648, -0.581938, -0.321974)
upgrade_markers = []

[node name="Pump8" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.796255, 0, -0.604961, 0, 1, 0, 0.604961, 0, 0.796255, 182.418, -0.581938, -24.5184)
upgrade_markers = []

[node name="Pump9" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.489641, 0, -0.871924, 0, 1, 0, 0.871924, 0, 0.489641, 205.519, -0.581938, -33.6539)
upgrade_markers = []

[node name="Pump10" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.264177, 0, -0.964475, 0, 1, 0, 0.964475, 0, -0.264177, 236.059, -0.581938, -26.1482)
upgrade_markers = []

[node name="Pump11" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.423473, 0, -0.905909, 0, 1, 0, 0.905909, 0, -0.423473, 259.542, -0.581938, -8.75987)
upgrade_markers = []

[node name="Pump12" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.955886, 0, -0.29374, 0, 1, 0, 0.29374, 0, -0.955886, 269.996, -0.581938, 26.9176)
upgrade_markers = []

[node name="Pump13" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.983016, 0, 0.183523, 0, 1, 0, -0.183523, 0, -0.983016, 265.958, -0.581938, 62.2766)
upgrade_markers = []

[node name="Pump14" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.804987, 0, 0.593293, 0, 1, 0, -0.593293, 0, -0.804987, 251.402, -0.581938, 91.8626)
upgrade_markers = []

[node name="Pump15" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.804987, 0, 0.593293, 0, 1, 0, -0.593293, 0, -0.804987, 232.941, -0.581938, 122.134)
upgrade_markers = []

[node name="Pump16" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.285437, 0, 0.958398, 0, 1, 0, -0.958398, 0, -0.285437, 152.2, -0.581938, 169.887)
upgrade_markers = []

[node name="Pump17" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.332325, 0, 0.943165, 0, 1, 0, -0.943165, 0, -0.332325, 115.19, -0.581938, 180.923)
upgrade_markers = []

[node name="Pump18" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.194919, 0, 0.98082, 0, 1, 0, -0.98082, 0, -0.194919, 83.344, -0.581938, 191.847)
upgrade_markers = []

[node name="Pump19" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.0530674, 0, 0.998591, 0, 1, 0, -0.998591, 0, -0.0530674, 53.8379, -0.581938, 199.452)
upgrade_markers = []

[node name="Pump20" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.0912937, 0, 0.995824, 0, 1, 0, -0.995824, 0, 0.0912937, 23.2328, -0.581938, 203.223)
upgrade_markers = []

[node name="Pump21" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.257268, 0, 0.96634, 0, 1, 0, -0.96634, 0, 0.257268, -38.3805, -0.581938, 201.176)
upgrade_markers = []

[node name="Pump22" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.419152, 0, 0.907916, 0, 1, 0, -0.907916, 0, 0.419152, -64.0525, -0.581938, 192.332)
upgrade_markers = []

[node name="Pump23" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.547958, 0, 0.836506, 0, 1, 0, -0.836506, 0, 0.547958, -88.5719, -0.581938, 184.39)
upgrade_markers = []

[node name="Pump24" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.807363, 0, 0.590056, 0, 1, 0, -0.590056, 0, 0.807363, -114.271, -0.581938, 171.274)
upgrade_markers = []

[node name="Pump25" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.883423, 0, 0.468577, 0, 1, 0, -0.468577, 0, 0.883423, -135.342, -0.581938, 142.014)
upgrade_markers = []

[node name="Pump26" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.995754, 0, -0.0920584, 0, 1, 0, 0.0920584, 0, 0.995754, -142.568, -0.581938, 110.285)
upgrade_markers = []

[node name="Pump27" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.942139, 0, -0.335222, 0, 1, 0, 0.335222, 0, 0.942139, -133.243, -0.581938, 79.3087)
upgrade_markers = []

[node name="Pump28" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.812348, 0, -0.583173, 0, 1, 0, 0.583173, 0, 0.812348, -114.678, -0.581938, 51.829)
upgrade_markers = []

[node name="Pump29" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.580802, 0, -0.814045, 0, 1, 0, 0.814045, 0, 0.580802, -68.731, -0.581938, 10.787)
upgrade_markers = []

[node name="Pump30" parent="AllPumps/FirstLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.240007, 0, -0.970771, 0, 1, 0, 0.970771, 0, 0.240007, -39.5392, -0.581938, -5.31339)
upgrade_markers = []

[node name="SecondLayer" type="Node" parent="AllPumps"]

[node name="Pump31" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.999431, 0, -0.0337313, 0, 1, 0, 0.0337313, 0, 0.999431, 10.884, -15, 18.543)
upgrade_markers = []

[node name="Pump32" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.924984, 0, -0.380006, 0, 1, 0, 0.380006, 0, 0.924984, 53.9898, -15, 31.6884)
upgrade_markers = []

[node name="Pump33" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.762081, 0, -0.647482, 0, 1, 0, 0.647482, 0, 0.762081, 72.2867, -15, 41.3567)
upgrade_markers = []

[node name="Pump34" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.995426, 0, 0.0955325, 0, 1, 0, -0.0955325, 0, 0.995426, 153.063, -15, 61.5465)
upgrade_markers = []

[node name="Pump35" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.868995, 0, 0.494821, 0, 1, 0, -0.494821, 0, 0.868995, 172.197, -15, 54.9908)
upgrade_markers = []

[node name="Pump36" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.743332, 0, 0.668923, 0, 1, 0, -0.668923, 0, 0.743332, 187.5, -15, 42.3871)
upgrade_markers = []

[node name="Pump37" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.748053, 0, 0.663639, 0, 1, 0, -0.663639, 0, -0.748053, 199.843, -15, 64.1252)
upgrade_markers = []

[node name="Pump38" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.337375, 0, -0.94137, 0, 1, 0, 0.94137, 0, -0.337375, 224.52, -15, 70.0497)
upgrade_markers = []

[node name="Pump39" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.992051, 0, -0.125835, 0, 1, 0, 0.125835, 0, -0.992051, 150.527, -15, 126.752)
upgrade_markers = []

[node name="Pump40" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.953286, 0, -0.30207, 0, 1, 0, 0.30207, 0, -0.953286, 94.0748, -15, 153.497)
upgrade_markers = []

[node name="Pump41" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.953286, 0, -0.30207, 0, 1, 0, 0.30207, 0, -0.953286, 70.8572, -15, 161.929)
upgrade_markers = []

[node name="Pump42" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.984467, 0, -0.175572, 0, 1, 0, 0.175572, 0, -0.984467, 48.2794, -15, 168.272)
upgrade_markers = []

[node name="Pump43" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.999662, 0, -0.0259845, 0, 1, 0, 0.0259845, 0, -0.999662, 24.3151, -15, 171.363)
upgrade_markers = []

[node name="Pump44" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.985538, 0, 0.169453, 0, 1, 0, -0.169453, 0, -0.985538, 1.06622, -15, 169.136)
upgrade_markers = []

[node name="Pump45" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.945251, 0, 0.326344, 0, 1, 0, -0.326344, 0, -0.945251, -18.1705, -15, 163.224)
upgrade_markers = []

[node name="Pump46" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.900994, 0, 0.433833, 0, 1, 0, -0.433833, 0, -0.900994, -71.8432, -15, 155.226)
upgrade_markers = []

[node name="Pump47" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.754377, 0, 0.656441, 0, 1, 0, -0.656441, 0, -0.754377, -93.7525, -15, 140.696)
upgrade_markers = []

[node name="Pump48" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.159071, 0, 0.987267, 0, 1, 0, -0.987267, 0, -0.159071, -105.816, -15, 120.491)
upgrade_markers = []

[node name="Pump49" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.791693, 0, 0.610919, 0, 1, 0, -0.610919, 0, 0.791693, -49.1493, -15, 36.2797)
upgrade_markers = []

[node name="Pump50" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.91085, 0, 0.412738, 0, 1, 0, -0.412738, 0, 0.91085, -31.6123, -15, 25.7919)
upgrade_markers = []

[node name="Pump51" parent="AllPumps/SecondLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.994515, 0, 0.104597, 0, 1, 0, -0.104597, 0, 0.994515, -10.5821, -15, 19.3293)
upgrade_markers = []

[node name="ThirdLayer" type="Node" parent="AllPumps"]

[node name="Pump52" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.995903, 0, 0.0904246, 0, 1, 0, -0.0904246, 0, -0.995903, 40.4612, -30, 56.3966)
upgrade_markers = []

[node name="Pump53" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.218671, 0, 0.975799, 0, 1, 0, -0.975799, 0, -0.218671, 97.5605, -30, 92.1365)
upgrade_markers = []

[node name="Pump54" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.973535, 0, -0.228537, 0, 1, 0, 0.228537, 0, -0.973535, 118.577, -30, 112.392)
upgrade_markers = []

[node name="Pump55" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.814956, 0, 0.579523, 0, 1, 0, -0.579523, 0, 0.814956, 161.094, -30, 84.8675)
upgrade_markers = []

[node name="Pump56" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.908676, 0, -0.417502, 0, 1, 0, 0.417502, 0, -0.908676, 94.4082, -30, 122.118)
upgrade_markers = []

[node name="Pump57" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.982084, 0, -0.188444, 0, 1, 0, 0.188444, 0, -0.982084, 55.7236, -30, 137.783)
upgrade_markers = []

[node name="Pump58" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.999244, 0, -0.0388756, 0, 1, 0, 0.0388756, 0, -0.999244, 34.1815, -30, 140.729)
upgrade_markers = []

[node name="Pump59" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.999348, 0, 0.036121, 0, 1, 0, -0.036121, 0, -0.999348, 11.5625, -30, 142.536)
upgrade_markers = []

[node name="Pump60" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(-0.831092, 0, -0.556136, 0, 1, 0, 0.556136, 0, -0.831092, -48.5605, -30, 68.3884)
upgrade_markers = []

[node name="Pump61" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.229659, 0, -0.973271, 0, 1, 0, 0.973271, 0, 0.229659, 75.8808, -45, 92.5073)
upgrade_markers = []

[node name="Pump62" parent="AllPumps/ThirdLayer" node_paths=PackedStringArray("upgrade_markers") instance=ExtResource("17_swadt")]
transform = Transform3D(0.744591, 0, -0.667521, 0, 1, 0, 0.667521, 0, 0.744591, 62.8914, -45, 78.7407)
upgrade_markers = []
